--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -321,7 +321,7 @@
     	<string name="Dismiss">Прервать</string>
     	
     	<string name="Abort_operation">Прервать операцию</string>
-    	<string name="There_is_already_an_operation_running">Уже запущена одна операция. Дождитесь ее завершения.</string>
+    	<string name="There_is_already_an_operation_running">Уже запущена одна операция. Дождитесь её завершения.</string>
     
     	<!-- Question dialogs -->
     	<string name="Are_you_sure_you_want_to_clear_the_history">Вы уверены, что хотите очистить историю?</string>
@@ -481,7 +481,7 @@
     <string name="System_default">Из системы</string>
     <string name="Serif">Serif</string>
     <string name="Monospace">Monospace</string>
-    <string name="File_saved_successfully">Файл успешно сохранен</string>
+    <string name="File_saved_successfully">Файл успешно сохранён</string>
     
     
     <!-- Preferences -->
@@ -491,7 +491,7 @@
 	<string name="Theme">Тема приложения</string>
     <string name="Choose_between_preinstalled_themes">Выберите желаемую тему</string>
     <string name="Light">Светлая</string>
-    <string name="Dark">Темная</string>
+    <string name="Dark">Тёмная</string>
     
     <string name="Toggle_visibility_of_hidden_files">Показ(ыв)ать скрытые файлы</string>
     <string name="Show_hidden_files">Скрытые файлы</string>
@@ -552,14 +552,14 @@
     <string name="Move">Переместить</string>
     
     <string name="Security">Безопасность</string>
-    <string name="Master_password_prompt">Solid Explorer использует для безопасности мастер-пароль, для шифрования всех учетных данных входа. Вам будет предложен мастер-пароль только один раз, до перезапуска приложения. В противном случае используется шифрование по умолчанию, без пароля. Хотите использовать эту функцию?</string>
-    <string name="Disable_master_password_warning">Отключение мастер-пароля, приведет к паролю по умолчанию. Вас никогда не спросят о нем. Выполнение входа останется зашифрованным. Вы хотите продолжить?</string>
+    <string name="Master_password_prompt">Solid Explorer использует для безопасности мастер-пароль, для шифрования всех учётных данных входа. Вам будет предложен мастер-пароль только один раз, до перезапуска приложения. В противном случае используется шифрование по умолчанию, без пароля. Хотите использовать эту функцию?</string>
+    <string name="Disable_master_password_warning">Отключение мастер-пароля, приведёт к паролю по умолчанию. Вас никогда не спросят о нем. Выполнение входа останется зашифрованным. Вы хотите продолжить?</string>
     <string name="Enable_master_password_warning">Если у вас уже есть зашифрованные закладки с паролем по умолчанию, они будут удалены. Продолжить?</string>
     <string name="Enable_master_password">Включить мастер-пароль</string>
     <string name="Too_weak_password">Пароль должен содержать не менее 6 и не более 16 символов</string>
     <string name="Enter_the_master_password">Введите мастер-пароль</string>
     <string name="Enter_a_new_master_password">Введите новый мастер-пароль.</string> 
-    <string name="Encrypt_all_login_ceredentials_with_a_master_password">Шифровать все данные учетной записи с помощью мастер-пароля</string>
+    <string name="Encrypt_all_login_ceredentials_with_a_master_password">Шифровать все данные учётной записи с помощью мастер-пароля</string>
     <string name="Set_master_password">Изменить мастер-пароль</string>
     <string name="All_passwords_will_be_reencrypted">Все пароли будут повторно зашифрованы</string>
     
@@ -616,7 +616,7 @@
     <string name="Delete_all_temporary_files">Удалить все временные файлы</string>
     <string name="Delete_operation_history_entries">Удалить историю входящих операций</string>
     <string name="Clear_file_type_associations">Очистить ассоциации типов файлов</string>
-    <string name="Clear_file_type_associations_summary">Удаление информации приложений для открытия определенных типов файлов</string>
+    <string name="Clear_file_type_associations_summary">Удаление информации приложений для открытия определённых типов файлов</string>
     <string name="Clear_temporary_files_on_exit">Очистить временные файлы при выходе</string>
     <string name="Temporary_files_will_be_removed_on_app_exit">Временные файлы будут удалены при выходе из приложения</string>
     
@@ -681,7 +681,7 @@
     <string name="Local_directory">Локальная директория</string>
     <string name="Default_panel">Панель по умолчанию</string>
     <string name="Destination_type">Назначить тип</string>
-    <string name="DiskUsage_not_installed">Похоже, DiskUsage не установлен. Это приложение показывает использование памяти в подробном содержании и легкое в использовании. Вы хотите установить его сейчас?</string>
+    <string name="DiskUsage_not_installed">Похоже, DiskUsage не установлен. Это приложение показывает использование памяти в подробном содержании и лёгкое в использовании. Вы хотите установить его сейчас?</string>
     <string name="Text_copied_to_clipboard">Текст скопирован в буфер обмена</string>
     <string name="Force_english">Английский язык</string>
     <string name="Force_english_summary">Включить английский интерфейс. Потребуется перезапуск программы..</string>
@@ -753,7 +753,7 @@
     	
     <!--  v 1.3.9 -->
     	<string name="Device_labels">Метки устройства</string>
-    	<string name="Device_labels_summary">Показать обычные имена устройств и дисков, вместо реальных имен, например \&quot;SD Карта\&quot; вместо \&quot;sdcard0\&quot;</string>
+    	<string name="Device_labels_summary">Показать обычные имена устройств и дисков, вместо реальных имён, например \&quot;SD Карта\&quot; вместо \&quot;sdcard0\&quot;</string>
     	<string name="Swap_device_labels">Смена меток устройств</string>
     	<string name="Swap_device_labels_summary">Поменять местами встроенную память с SD картой, в случае неправильного обнаружения</string>
     	<string name="Panels">Панели</string>
@@ -772,7 +772,7 @@
     	<!-- Already exists, just changed the content -->
     	<string name="Expiration_message">Спасибо, что выбрали Solid Explorer. Чтобы продолжить работу с этим приложением, купите мне виртуальное пиво, посредством покупки ключа разблокировки с Google Play. Делайте это только тогда, когда вы полностью удовлетворены приложением.</string>
     	<string name="Purchased_message">Благодарю Вас за покупку полной версии Solid Explorer. Я надеюсь, что Вы довольны.</string>
-    	<string name="Trial_expired">Пробный период истек</string>
+    	<string name="Trial_expired">Пробный период истёк</string>
     	<string name="Purchase">Купить</string>
     	<string name="No_thanks">Нет, спасибо</string>
     	<string name="Function_not_available">Эта функция недоступна в текущей версии прошивки</string>
