--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -684,7 +684,7 @@
     <string name="DiskUsage_not_installed">Похоже, DiskUsage не установлен. Это приложение показывает использование памяти в подробном содержании и лёгкое в использовании. Вы хотите установить его сейчас?</string>
     <string name="Text_copied_to_clipboard">Текст скопирован в буфер обмена</string>
     <string name="Force_english">Английский язык</string>
-    <string name="Force_english_summary">Включить английский интерфейс. Потребуется перезапуск программы..</string>
+    <string name="Force_english_summary">Включить английский интерфейс. Потребуется перезапуск программы.</string>
     <string name="Encoding">Кодировка</string>
     <string name="Network_thumbnails">Сетевой кэш миниатюр</string>
     <string name="Network_thumbnails_summary">Будет использован мобильный трафик или другое подключение.</string>
