--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -227,7 +227,7 @@
     <string name="Format">Формат</string>
     <string name="Use_password_protection">Использовать защиту паролем</string>
     <string name="Fast">Быстрое</string>
-    <string name="Normal">Нормальное</string>
+    <string name="Normal">Обычное</string>
     <string name="Good">Хорошее</string>
     <string name="Best">Максимум</string>
     
