--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -65,14 +65,14 @@
     <string name="Detailed_grid">Подробная сетка</string>
     
     <!-- "Sort" popup -->
-    <string name="Sort_files_by">Сортировать по</string>
+    <string name="Sort_files_by">Сортировка файлов</string>
     <string name="File_name">По имени</string>
     <string name="File_size">По размеру</string>
     <string name="File_type">По типу</string>
     <string name="Modified_date">По дате изменения</string>
     <string name="Ascending">По возрастанию</string>
     <string name="Descending">По убыванию</string>
-    <string name="In_order">По порядку</string>
+    <string name="In_order">Порядок сортировки</string>
     
     <!-- Browser switch popup -->
     <string name="Active_browser">Текущая</string>
