--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -662,7 +662,7 @@
     <string name="Icon_designer">Дизайн иконки</string>
     <string name="Prefix">Префикс</string>
     <string name="Translations">Перевод</string>
-    <string name="Translations_summary">Коррекция английского языка при поддержке Стивена Шена</string>
+    <string name="Translations_summary">Перевод на русский язык: G3-SCORPIO. Коррекция: OsitKP, vit528, Unregistered, noval4, Nasrulla</string>
     <string name="Empty">Пусто</string>
     <string name="Press_once_again_to_exit">Нажмите ещё раз для выхода</string>
     
