--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -807,5 +807,7 @@
      <string name="Trial_check_notice">Solid Explorer не смог проверить триальный период. Разрешите интернет-соединение сейчас или в течении 2х дней. Иначе ваш испытательный срок закончится.</string>
      <string name="Back_goes_to_root">Возврат в корень</string>
      <string name="Back_goes_to_root_summary">Кратким нажатием кнопки назад, возвращаться в корень системы.</string>
+     <string name="Keep_the_screen_on">Включенный экран</string>
+     <string name="Keep_the_screen_on_summary">Удерживать экран включенным при передаче файлов. (если падает скорость когда экран потух)</string>
      	
 </resources>
