--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -805,8 +805,8 @@
      <string name="Support_summary">Посетить страницу помощи Solid Explorer</string>
      <string name="Experimental_feature_notifier">Пожалуйста, обратите внимание, что эта функция является экспериментальной и возможно не будет работать на вашей версии Android.</string>
      <string name="Trial_check_notice">Solid Explorer не смог проверить триальный период. Разрешите интернет-соединение сейчас или в течении 2х дней. Иначе ваш испытательный срок закончится.</string>
-     <string name="Back_goes_to_root">Вернуться в корень</string>
-     <string name="Back_goes_to_root_summary">Кратким нажатием кнопки назад, возвращаться в корень системы.</string>
+     <string name="Back_goes_to_root">Возврат в корень</string>
+     <string name="Back_goes_to_root_summary">Краткими нажатиями кнопки назад, возвращаться в корень системы.</string>
      <string name="Keep_the_screen_on">Включенный экран</string>
      <string name="Keep_the_screen_on_summary">Удерживать экран включенным при передаче файлов. (если падает скорость когда экран потух)</string>
 </resources>
